<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/horizontal_activity"
    android:paddingVertical="@dimen/vertical_activity"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnAutoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/al_animation_layout" />

    <Button
        android:id="@+id/btnPropertyAnimation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:text="@string/al_animation_property" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/ap_transition"/>

    <Button
        android:id="@+id/btnActivityTransition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/ap_activity_transition"/>

    <Button
        android:id="@+id/btnActivityTransition21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/ap_activity_transition21"/>

    <Button
        android:id="@+id/ap_activity_transitionSharedElements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/ap_activity_transitionSharedElements" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:text="@string/ap_shared_elements" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_small" />

</LinearLayout>